force-app/main/default/objects/Bowl_Game__c/Bowl_Game__c.object-meta.xml
<CustomObject>
    <label>Bowl Game</label>
    <nameField>
        <label>Bowl Game Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bowl Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>