force-app/main/default/objects/Bowl_Game__c/fields/Away_Points__c.field-meta.xml
<CustomField>
    <fullName>Away_Points__c</fullName>
    <label>Away Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>