force-app/main/default/objects/Bowl_Game__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <label>Away Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>