force-app/main/default/objects/Bowl_Game__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, it means that the game has been completed. Populated from a callout to the external college football API.</description>
    <inlineHelpText>If this box is checked, it means that the game has been completed. Populated from a callout to the external college football API.</inlineHelpText>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>