force-app/main/default/objects/Bowl_Game__c/fields/Game_ID__c.field-meta.xml
<CustomField>
    <fullName>Game_ID__c</fullName>
    <description>This is the ID pulled from the API. Used to identify the specific bowl game.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the ID pulled from the API. Used to identify the specific bowl game.</inlineHelpText>
    <label>Game ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>