force-app/main/default/objects/Bowl_Game__c/fields/Home_Team__c.field-meta.xml
<CustomField>
    <fullName>Home_Team__c</fullName>
    <label>Home Team</label>
    <length>200</length>
    <type>Text</type>
</CustomField>