force-app/main/default/objects/Bowl_Game__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date the Bowl Game will be played on. Pulled in from the external college football API.</description>
    <inlineHelpText>Date the Bowl Game will be played on. Pulled in from the external college football API.</inlineHelpText>
    <label>Start Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>