force-app/main/default/objects/Bowl_Game__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <formula>IF(Home_Points__c &gt; Away_Points__c, Home_Team__c,
			IF(Away_Points__c &gt; Home_Points__c, Away_Team__c,
						IF(Home_Points__c = Away_Points__c, &apos;Tie&apos;,
									NULL)))</formula>
    <label>Winner</label>
    <type>Text</type>
</CustomField>