force-app/main/default/objects/Bowl_Game__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Bowl Games</relationshipLabel>
    <relationshipName>Bowl_Games</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>