force-app/main/default/objects/Bowl_Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Game_ID__c</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Points__c</columns>
    <columns>Away_Team__c</columns>
    <columns>Away_Points__c</columns>
    <columns>Winner__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>