force-app/main/default/objects/Bowl_Game__c/listViews/This_Year_s_Bowl_Games.listView-meta.xml
<ListView>
    <fullName>This_Year_s_Bowl_Games</fullName>
    <columns>NAME</columns>
    <columns>Home_Team__c</columns>
    <columns>Home_Points__c</columns>
    <columns>Away_Team__c</columns>
    <columns>Away_Points__c</columns>
    <columns>Winner__c</columns>
    <columns>Completed__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>This Year&apos;s Bowl Games</label>
</ListView>